--- a/digital_twin_optimizer_2DOscillator.ipynb
+++ b/digital_twin_optimizer_2DOscillator.ipynb
@@ -55,7 +55,7 @@
     "        beta = np.array([params[10]]),\n",
     "        gamma = np.array([params[11]]))                     \n",
     "    \n",
-    "    con = connectivity.Connectivity.from_file(source_file=\"/rds/general/user/wo22/home/connectivity/connectivity_76.zip\")\n",
+    "    con = connectivity.Connectivity()\n",
     "    coupl = coupling.Linear(a=np.array([1]))\n",
     "    nsigma = np.array([0.01,])\n",
     "    hiss = noise.Additive(nsig = nsigma)\n",
@@ -65,7 +65,7 @@
     "    # - - - - - - - - - - - - - - - - - - - - - - - -\n",
     "    # Attach an EEG forward model (a \"monitor\")\n",
     "    \n",
-    "    mon_EEG = monitors.EEG.from_file(sensors_fname='eeg_TUHsensors.txt')\n",
+    "    mon_EEG = monitors.EEG.()\n",
     "    mon_EEG.region_mapping=rm\n",
     "    mon_EEG.period=(1/250)*1000 \n",
     "    mon_EEG.reference=\"average\"\n",
@@ -195,7 +195,7 @@
     "# - - - - - - - - - - - - - - - - - - - - - - - -\n",
     "# import the targeteeg data\n",
     "\n",
-    "file_path = '/rds/general/user/wo22/projects/scott_students_wiktor/live/subjects.xls'\n",
+    "file_path = 'subjects.xls'\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
@@ -311,7 +311,7 @@
     "    \n",
     "    plt.gcf().set_facecolor('white')\n",
     "\n",
-    "    output_dir = os.path.abspath(\"/rds/general/user/wo22/projects/scott_students_wiktor/live/graphical_outputs/graphical_outputs_new/\")\n",
+    "    output_dir = os.path.abspath(\"path to output")\n",
     "\n",
     "    plt.savefig(os.path.join(output_dir, output_name+\".png\"))\n",
     "\n",
@@ -322,7 +322,7 @@
     "file_name = os.path.basename(subject_name)\n",
     "output_name = os.path.splitext(file_name)[0]\n",
     "\n",
-    "output_file_dir = '/rds/general/user/wo22/projects/scott_students_wiktor/live/outputs/fits_new'\n",
+    "output_file_dir = 'path to output'\n",
     "\n",
     "# File 1: Parameters\n",
     "parameters_filename = os.path.join(output_file_dir, f\"{output_name}_parameters.csv\")\n",
