--- a/digital_twin_optimizer_2DOscillator.ipynb
+++ b/digital_twin_optimizer_2DOscillator.ipynb
@@ -311,7 +311,7 @@
     "    \n",
     "    plt.gcf().set_facecolor('white')\n",
     "\n",
-    "    output_dir = os.path.abspath("path to output")  \n",
+    "    output_dir = os.path.abspath("path to output") 
     "\n",
     "    plt.savefig(os.path.join(output_dir, output_name+\".png\"))\n",
     "\n",
