--- a/Statistical_Analysis.ipynb
+++ b/Statistical_Analysis.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
     "\n",
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
     "\n",
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Define parameter columns\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
@@ -294,7 +294,7 @@
     "plt.tight_layout()\n",
     "plt.gcf().set_facecolor('white')\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"K-S Test\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name+\".png\"))"
    ]
@@ -320,7 +320,7 @@
     "    plt.yticks(fontsize=15)\n",
     "    #plt.text(0.5, 0.02, f'p-value: {row[\"p-value\"]:.3f}', fontsize=12, ha='center', va='center', transform=plt.gca().transAxes)\n",
     "    plt.gcf().set_facecolor('white')\n",
-    "    output_dir = os.path.abspath(\"path to output")\n",
+    "    output_dir = os.path.abspath(\"path to output\")\n",
     "    output_name = \"KS_Test_\"+parameter\n",
     "    #plt.savefig(os.path.join(output_dir, output_name+\".png\"))"
    ]
@@ -331,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Select parameter columns\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
@@ -357,7 +357,7 @@
     "plt.xticks(np.arange(len(parameter_columns)), parameter_columns, rotation=45, fontsize=15)\n",
     "plt.axhline(y=dotted_line_y, color='black', linestyle='dotted')\n",
     "plt.grid(False) \n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"KS-Test Heatmap\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name+\".png\"))\n"
    ]
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Filter and sort data\n",
     "filtered_data = data.dropna(subset=['Similarity'], how='all')\n",
@@ -400,7 +400,7 @@
     "plt.title('Distribution of Dissimilarity Values by Class', pad=20, fontsize=20)\n",
     "plt.legend(fontsize=10)\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"KS-Test Similarities\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name + \".png\"))\n"
    ]
@@ -432,7 +432,7 @@
     "plt.title('Dissimilarity between groups', pad=20, fontsize=20)\n",
     "plt.xticks(fontsize=15)\n",
     "plt.grid(True)\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"KS-Test Similarities Box Plot\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Filter and sort data\n",
     "filtered_data = data.dropna(subset=['Similarity', 'Initial Similarity'], how='all')\n",
@@ -474,7 +474,7 @@
     "\n",
     "\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"Difference_Plot\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -485,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Filter and sort data\n",
     "filtered_data = data.dropna(subset=['Similarity', 'Initial Similarity'], how='all')\n",
@@ -521,7 +521,7 @@
     "\n",
     "plt.subplots_adjust(right=0.7)\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"Similarity_difference_for_presentation\"\n",
     "plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -539,7 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Filter and sort data\n",
     "filtered_data = data.dropna(subset=['Similarity', 'age'], how='any')\n",
@@ -559,7 +559,7 @@
     "plt.yticks(fontsize=15)\n",
     "plt.xticks(fontsize=15)\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"KS-Test Similarities by Age in Normal Subjects\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -573,7 +573,7 @@
     "from scipy.stats import pearsonr\n",
     "\n",
     "\n",
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
     "\n",
@@ -635,7 +635,7 @@
     "    plt.xlabel(\"Age\", fontsize=15)\n",
     "    plt.ylabel(param, fontsize=15)\n",
     "    plt.grid(True)\n",
-    "    output_dir = os.path.abspath(\"path to output")\n",
+    "    output_dir = os.path.abspath(\"path to output\")\n",
     "    output_name = \"Correlation between age and tau\"\n",
     "    plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -665,7 +665,7 @@
     "plt.legend(fontsize=10)\n",
     "plt.tight_layout()\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"Correlation Age in Normal Subjects\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name + \".png\"))"
    ]
@@ -683,7 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
     "\n",
@@ -729,7 +729,7 @@
     "plt.tight_layout()\n",
     "plt.gcf().set_facecolor('white')\n",
     "\n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"T-Test\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name+\".png\")\n"
    ]
@@ -751,7 +751,7 @@
     "    plt.yticks(fontsize=15)\n",
     "    plt.text(0.5, 0.02, f'p-value: {row[\"p-value\"]:.3f}', fontsize=12, ha='center', va='center', transform=plt.gca().transAxes)\n",
     "    plt.gcf().set_facecolor('white')\n",
-    "    output_dir = os.path.abspath(\"path to output")\n",
+    "    output_dir = os.path.abspath(\"path to output\")\n",
     "    output_name = \"T-Test \"+parameter\n",
     "    #plt.savefig(os.path.join(output_dir, output_name+\".png\"))\n"
    ]
@@ -762,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('path to file')\n",
+    "data = pd.read_excel('path to file\')\n",
     "\n",
     "# Select parameter columns\n",
     "parameter_columns = ['tau', 'I', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'alpha', 'beta', 'gamma']\n",
@@ -784,7 +784,7 @@
     "plt.xticks(np.arange(len(parameter_columns)), parameter_columns, rotation=45)\n",
     "plt.ylabel(\"Subjects\")\n",
     "plt.grid(False) \n",
-    "output_dir = os.path.abspath(\"path to output")\n",
+    "output_dir = os.path.abspath(\"path to output\")\n",
     "output_name = \"T-Test Heatmap\"\n",
     "#plt.savefig(os.path.join(output_dir, output_name+\".png\"))\n"
    ]
@@ -957,7 +957,7 @@
     "# - - - - - - - - - - - - - - - - - - - - - - - -\n",
     "# import the targeteeg data\n",
     "\n",
-    "file_path = 'path to file'\n",
+    "file_path = 'path to fil\e'\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
@@ -1007,7 +1007,7 @@
     "file_name = os.path.basename(subject_name)\n",
     "output_name = os.path.splitext(file_name)[0]\n",
     "\n",
-    "output_file_dir = 'path to output'\n",
+    "output_file_dir = 'path to output\'\n",
     "\n",
     "# File \n",
     "initial_similarity_filename = os.path.join(output_file_dir, f\"{output_name}_initial_similarity.csv\")\n",
