--- a/Statistical_Analysis.ipynb
+++ b/Statistical_Analysis.ipynb
@@ -957,7 +957,7 @@
     "# - - - - - - - - - - - - - - - - - - - - - - - -\n",
     "# import the targeteeg data\n",
     "\n",
-    "file_path = 'path to fil\e'\n",
+    "file_path = 'path to file'\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
@@ -1007,7 +1007,7 @@
     "file_name = os.path.basename(subject_name)\n",
     "output_name = os.path.splitext(file_name)[0]\n",
     "\n",
-    "output_file_dir = 'path to output\'\n",
+    "output_file_dir = 'path to output'\n",
     "\n",
     "# File \n",
     "initial_similarity_filename = os.path.join(output_file_dir, f\"{output_name}_initial_similarity.csv\")\n",
